--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,39 @@
+<!--                      HOME PAGINA                       -->
 <%- include('./partials/head') %>
 
-<!-- Profiel -->
-<link rel="stylesheet" href="style.css">
-<h1>Boeken</h1>
+
+<!-- <link rel="stylesheet" href="style.css"> -->
+<h1>HOME</h1>
 
 <section>
-  <% items.forEach(item => { %>
-        <article>
-          <div class="top">
-            <img src="https://fdnd-agency.directus.app/assets/<%= item.afbeelding %>" alt="leesboek">
-          </div>
-          <div class="bottom">
-            <p>
-              <%= item.title %>
-            </p>
-            <label>
-              <input type="checkbox" name="boek" id="opslaan">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                <path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 
+  <!-- elke item (cd, acitivity, book) -->
+  <% items.forEach(item=> { %>
+    <article>
+      <div class="top">
+        <!-- gelinkte afbeeldingen -->
+        <img src="https://fdnd-agency.directus.app/assets/<%= item.afbeelding %>" alt="leesboek">
+      </div>
+      <div class="bottom">
+        <h2>
+          <!-- title van elke boek -->
+          <a href="/boeken/<%=item.id%>">
+            <%= item.title %>
+          </a>
+        </h2>
+        <!-- Form voor opslaan knopje met svg -->
+        <form method="post" action="/boeken/<%=item.id%>">
+          <button name="savedItems">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+              <path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 
                        32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 
                        32-32s-14.3-32-32-32H256V80z" />
-              </svg>
-            </label>
-          </div>
-        </article>
-  <% }) %>
+            </svg>
+          </button>
+        </form>
+
+      </div>
+    </article>
+    <% }) %>
 </section>
 
 input:checked + svg
