new adjustment :diamond_shape_with_a_dot_inside:

--- a/public/head.css
+++ b/public/head.css
@@ -260,7 +260,8 @@ body.dark .sidebar li a:hover .text{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
+    overflow: auto;
 }
 .menu-bar::-webkit-scrollbar{
     display: none;
