--- a/public/style.css
+++ b/public/style.css
@@ -1,40 +1,57 @@
-* {
-    margin: 0;
-    padding: 0;
-}
+@import url(head.css);
 
-body{
+h1{
+    margin: auto;
+    text-align: center;
+    color: red;
+    height: 70px;
+}
+h2{
     margin: 0;
 }
-
 section {
-    height: 400px;
-    width: 300px;
-    display: grid;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-left: 5em;
     gap: 1em;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    & article{
+    display: inline-block;
+    width:225px;
+    }
 }
 
-top {
-    height: 300px;
-    width: 300px;
+.top {
+    height: 200px;
+    width: 200px;
     background-color: brown;
 }
 
 img {
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
 }
 
 .bottom {
     height: 100px;
-    width: 300px;
+    width: 200px;
     background-color: burlywood;
+    overflow: auto;
+    & a{
+        font-weight: normal;
+        text-decoration: none;
+        font-size: .7em;
+        color: black;
+        margin: .3em;
+    }
 }
 
 input{
     display: none;
 }
+
 svg{
     height: 35px;
     width: 35px;
