--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,6 +9,11 @@
   <script src="main.js" defer></script>
   <link rel="stylesheet" href="style.css">
   <title>OBA</title>
+  <!--    font link       -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
